[package]
name = "spaceatlas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "2.0.1"
inquire = { version = "0.6.2", features = ["console"] }
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
